# CryptoFi

./: .gitattributes  .gitignore  README.md
Documents/: Documentation-CryptoFi.docx  Presentation-CryptoFi.pptx
app/: Analytics.cpp  Analytics.h  CMakeLists.txt  accounts.cpp  accounts.h  app.run.xml  authentication.cpp  authentication.h  budgetCategories.cpp  budgetCategories.h  export.cpp  export.h  main.cpp  mainMenu.cpp  mainMenu.h  mainScreen.cpp  mainScreen.h  pch.h  predictions.cpp  predictions.h
app/data/: accounts.csv
app/data/profiles/: Ivan_profile.csv  John_profile.csv  Kaloyan_profile.csv  Kiko1_profile.csv  Kiko_profile.csv  Kolioo_profile.csv
